Fixed vertical scroll on mobile

--- a/webroot/css/styles.css
+++ b/webroot/css/styles.css
@@ -35,6 +35,8 @@ body {
 
 section {
 	position: relative;
+
+	z-index: 1;
 }
 
 section article {
@@ -85,8 +87,6 @@ video {
 .content {
 	width: 100%;
 	height: 100%;
-
-	overflow: hidden;
 }
 
 .content.auto {
@@ -171,9 +171,15 @@ video {
 
 /*= Scroll
 ************************************/
+.content section.scroll {
+	margin-top: 0;
+	height: 100%;
+	width: 100%;
+}
+
 .scroll article {
 	z-index: 1;
-	position: fixed;
+	position: absolute;
 	max-width: 100%;
 
 	display: none;
